--- a/.env
+++ b/.env
@@ -31,3 +31,7 @@ APP_SECRET=eb00110432f4a7ba5fe428ee01508667
 DATABASE_URL=mysql://root:@127.0.0.1:3306/api-platform?serverVersion=mariadb-10.4.11
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
